<resources>
    <string name="app_name">My Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="content">Are you sure you want to delete this note?</string>
    <string name="share_note">Share your notes</string>
    <string name="cancel">Cancel</string>
    <string name="yesdelete">Yes, Delete</string>
    <string name="action_settings">Settings</string>

    <string name="nav_addnote">Add Notes</string>
    <string name="nav_search">Search</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="about">About</string>
    <string name="title">Your Notes : </string>
    <string name="menu_delete">Delete Item</string>
    <string name="no_title">No Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="content_hint">Note Contents</string>
    <string name="save_menu_noteedit">Save</string>
    <string name="delete_menu_noteedit">Delete</string>
</resources>
